2008-06-19  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport/MemberExistsException.cs: Improve
	  translatability.
	* MonoDevelop.DesignerSupport/BindingService.cs: Fix a possible NRE.
	  Check base classes when looking for conflicting identifiers.

2008-06-16  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport/ClassOutlineTextEditorExtension.cs: Cache
	  precendence selection results in IEnumerable merger.

2008-06-16  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport/ClassOutlineTextEditorExtension.cs: List
	  members in the order they're present in the file.

2008-06-13  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml,
	  MonoDevelop.DesignerSupport.mdp,
	  MonoDevelop.DesignerSupport/ClassOutlineTextEditorExtension.cs,
	  Makefile.am: Implement document outline for .NET source files.

2008-06-10  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml,
	  MonoDevelop.DesignerSupport.mdp,
	  MonoDevelop.DesignerSupport/DesignerSupportService.cs,
	  MonoDevelop.DesignerSupport/CodeBehindService.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindMissingClassBuilder.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindDisplayBinding.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindProjectFileExtension.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/ICodeBehindProvider.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindClassEventArgs.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindClass.cs,
	  MonoDevelop.DesignerSupport.CodeBehind/CodeBehindViewContent.cs,
	  Makefile.am: Remove old CodeBehind grouping mechanism.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml: Bump MD version.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/TextEditor.cs,