@@ -1,3 +1,8 @@
+2008-06-23  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.DesignerSupport/ClassOutlineTextEditorExtension.cs: Group
+	  members in regions. Reduce frequency of updates to 0.2Hz.
+
 2008-06-19  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.DesignerSupport/MemberExistsException.cs: Improve
